--- a/shop/templates/shop/orders.html
+++ b/shop/templates/shop/orders.html
@@ -1,14 +1,16 @@
 {%extends "shop/base.html"%}
 {%load static%}
-{%block title%}shop|Orders{%endblock%}
+{%block title%}shop|Orders{{product.name}}{%endblock%}
 {%block content%}
 <h1 class="text-center fw-bold mb-4">Заказы</h1>
 {%for order in orders%}
 <div class="d-flex flex-wrap justify-content-center gap-3 mx-auto" style="max-width: 800px; box-shadow: 0 0 5px #0002;">
     <span class="align-self-start fw-bold fs-5">{{order.id}}</span>
+    <img width="100px" height=" 50px" src="{{order.product.img.url}}" alt="">
     <span>{{order.product.name}}</span>
     <span>{{order.adres|truncatewords:6}}</span>
     <span>{{order.created_at}}</span>
-{%endfor%}
+    {%endfor%}
 </div>
+
 {%endblock%}
