Start making check info

--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -19,7 +19,7 @@
 
         <div class="text-end">
           <button type="button" class="btn btn-outline-light me-2"><ya-tr-span data-index="23-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Login" data-translation="Вход" data-ch="1" data-type="trSpan" style="visibility: inherit !important;">Вход</ya-tr-span></button>
-          <button type="button" class="btn btn-warning"><ya-tr-span data-index="23-1" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Sign-up" data-translation="Регистрация" data-ch="1" data-type="trSpan" style="visibility: inherit !important;">Регистрация</ya-tr-span></button>
+          <a href="{% url 'signup' %}"><button type="button" class="btn btn-warning"><ya-tr-span data-index="23-1" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Sign-up" data-translation="Регистрация" data-ch="1" data-type="trSpan" style="visibility: inherit !important;">Регистрация</ya-tr-span></button></a>
         </div>
       </div>
     </div>
