--- a/core/templates/core/auth/signup.html
+++ b/core/templates/core/auth/signup.html
@@ -4,6 +4,9 @@
 
 {% block content %}
     <h1 class="text-body text-center fw-bold mb-4">Sign Up</h1>
+    {% if error %}
+       <p class="text-center text-danger fw-bold">{{error}}</p>
+    {% endif %}
     <div class="d-flex gap-3 flex-wrap justify-content-center mx-auto">
         <form class="d-flex flex-column gap-2" method="post">
             {% csrf_token %}
