login and logout

--- a/core/templates/core/auth/signin.html
+++ b/core/templates/core/auth/signin.html
@@ -5,6 +5,9 @@
 
 {% block content %}
     <h1 class="text-body text-center fw-bold mb-4">Sign In</h1>
+    {% if error %}
+       <p class="text-center text-danger fw-bold">{{error}}</p>
+    {% endif %}
     <div class="d-flex gap-3 flex-wrap justify-content-center mx-auto">
         <form class="d-flex flex-column gap-2" method="post">
             {% csrf_token %}
