--- a/core/templates/core/auth/signin.html
+++ b/core/templates/core/auth/signin.html
@@ -1,5 +1,5 @@
 <!-- signin.html -->
-{% extends 'core/base.html' %}
+{% extends 'shop/base.html' %}
 {% load static %}
 {% block title %}Shop | SignIn{% endblock %}
 
